Fix (NONE) fix spacing between blocks

--- a/source/_patterns/02-organisms/00-global/02-basic-layout.scss
+++ b/source/_patterns/02-organisms/00-global/02-basic-layout.scss
@@ -12,6 +12,7 @@
 
     > .pageContent {
       flex:1;
+      -ms-flex-preferred-size : auto;
       width:100%;
     }
 
